--- a/inicio/inicio.html
+++ b/inicio/inicio.html
@@ -6,50 +6,247 @@
         <!--Boostrap-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet" href="style-inicio.css">
+        <script src="https://kit.fontawesome.com/ae360af17e.js" crossorigin="anonymous"></script>
         <title>Inicio</title>
     </head>
     <body>
-        <nav class="navbar navbar-dark bg-dark fixed-top">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Inicio</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar" aria-label="Toggle navigation">
+       <div class="wrapper">
+          <aside id="sidebar">
+            <!-- Contenido sidebar -->
+             <div class="h-100">
+                <div class="sidebar-logo">
+                  <a href="#">SystemAdmin</a>
+                </div>
+                <ul class="sidebar-nav">
+                  <li class="sidebar-header">
+                    Admin
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="#" class="sidebar-link">
+                      <i class="bi bi-list-ul pe-2"></i>
+                      Dashbohard
+                    </a>
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed" data-bs-target="#pages" data-bs-toggle="collapse" aria-expanded="false">
+                      <i class="bi bi-file-earmark pe-2"></i>
+                      Pages
+                    </a>
+                    <ul id="pages" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Page 1</a>
+                      </li>
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Page 2</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed" data-bs-target="#posts" data-bs-toggle="collapse" aria-expanded="false">
+                      <i class="bi bi-sliders pe-2"></i>
+                      Posts
+                    </a>
+                    <ul id="posts" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Post 1</a>
+                      </li>
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Post 2</a>
+                      </li>
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Post 3</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed" data-bs-target="#auth" data-bs-toggle="collapse" aria-expanded="false">
+                      <i class="fa-regular fa-user pe-2"></i>
+                      Posts
+                    </a>
+                    <ul id="auth" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Login</a>
+                      </li>
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Register</a>
+                      </li>
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link">Forgot Password</a>
+                      </li>
+                    </ul>
+                  </li>
+                  <li class="sidebar-header">
+                    Multi level menu
+                  </li>
+                  <li class="sidebar-item">
+                    <a href="#" class="sidebar-link collapsed" data-bs-target="#multi" data-bs-toggle="collapse" aria-expanded="false">
+                      <i class="fa-solid fa-share-nodes pe-2"></i>
+                      Multi Dropdown
+                    </a>
+                    <ul id="multi" class="sidebar-dropdown list-unstyled collapse" data-bs-parent="#sidebar">
+                      <li class="sidebar-item">
+                        <a href="#" class="sidebar-link collapsed" data-bs-target="#level-1" data-bs-toggle="collapse" aria-expanded="false">
+                          Level 1
+                        </a>
+                        <ul id="level-1" class="sidebar-dropdown list-unstyled collapse">
+                          <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Level 1.1</a>
+                          </li>
+                          <li class="sidebar-item">
+                            <a href="#" class="sidebar-link">Level 1.2</a>
+                          </li>
+                        </ul>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+             </div>
+          </aside>
+          <div class="main">
+            <nav class="navbar navbar-expand px-3 border-bottom">
+              <button class="btn" id="sidebar-toggle" type="button">
                 <span class="navbar-toggler-icon"></span>
               </button>
-              <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                  <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">SystemAdmin</h5>
-                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              <div class="navbar-collapse navbar">
+                <ul class="navbar-nav">
+                  <li class="nav-item dropdown">
+                    <a href="#" data-bs-toggle="dropdown" class="nav-icon pe-md-0">
+                      <img src="img-inicio/profile.jpg" class="avatar img-fluid rounded" alt="">
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-end">
+                      <a href="#" class="dropdown-item">Profile</a>
+                      <a href="#" class="dropdown-item">Settings</a>
+                      <a href="#" class="dropdown-item">Logout</a>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+            </nav>
+            <main class="content px-3 py-2">
+              <div class="container-fluid">
+                <div class="mb-3">
+                  <h4>Admin Dashboard</h4>
                 </div>
-                <div class="offcanvas-body">
-                    <form class="d-flex mt-3" role="search">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-success" type="submit">Search</button>
-                      </form>
-                  <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="#">Link</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Dropdown
+                <div class="row">
+                  <div class="col-12 col-md-6 d-flex">
+                    <div class="card flex-fill border-0 illustration">
+                      <div class="card-body p-0 d-flex flex-fill">
+                        <div class="row g-0 w-100">
+                          <div class="col-6">
+                            <div class="p-3 m-1">
+                              <h4>Welcome Back, Admin</h4>
+                              <p class="mb-0">Admin Dashboard, SystemAdmin</p>
+                            </div>
+                          </div>
+                          <div class="col-6 align-self-end text-end">
+                            <img src="img-inicio/customer-support.jpg" class="img-fluid illustration-img" alt="">
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-12 col-md-6 d-flex"></div>
+                  <div class="card flex-fill border-0">
+                    <div class="card-body py-4">
+                      <div class="d-flex aling-items-start">
+                        <div class="flex-grow-1">
+                          <h4 class="mb-2">
+                            $78.000
+                          </h4>
+                          <p class="mb-2">
+                            Total Eanings
+                          </p>
+                          <div class="mb-0">
+                            <span class="badge text-success me-2">
+                              +9%
+                            </span>
+                            <span class="text-muted">
+                              Since Last Month
+                            </span>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <!-- tabla de elementos -->
+                 <div class="card border-0">
+                  <div class="card-header">
+                    <h5 class="card-title">
+                      Basic Table
+                    </h5>
+                    <h6 class="card-subtitle text-muted">
+                      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eos ducimus culpa suscipit obcaecati distinctio voluptatem itaque ex reiciendis ipsa inventore debitis aliquid recusandae adipisci vitae hic similique rem, animi tempora?
+                    </h6>
+                  </div>
+                  <div class="card-body">
+                    <table class="table">
+                      <thead>
+                        <tr>
+                          <th scope="col">#</th>
+                          <th scope="col">First</th>
+                          <th scope="col">Last</th>
+                          <th scope="col">Handle</th>
+                        </tr>
+                      </thead>
+                      <tbody>
+                        <tr>
+                          <th scope="row">1</th>
+                          <td>Mark</td>
+                          <td>Otto</td>
+                          <td>@mdo</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">2</th>
+                          <td>Jacob</td>
+                          <td>Thornton</td>
+                          <td>@fat</td>
+                        </tr>
+                        <tr>
+                          <th scope="row">3</th>
+                          <td colspan="2">Larry the Bird</td>
+                          <td>@twitter</td>
+                        </tr>
+                      </tbody>
+                    </table>
+                  </div>
+                 </div>
+              </div>
+            </main>
+            <footer class="footer">
+              <div class="container-fluid">
+                <div class="row text-muted">
+                  <div class="col-6 text-start">
+                    <p class="mb-0">
+                      <a href="#" class="text-muted">
+                        <strong>SystemAdmin</strong>
                       </a>
-                      <ul class="dropdown-menu dropdown-menu-dark">
-                        <li><a class="dropdown-item" href="#">Action</a></li>
-                        <li><a class="dropdown-item" href="#">Another action</a></li>
-                        <li>
-                          <hr class="dropdown-divider">
-                        </li>
-                        <li><a class="dropdown-item" href="#">Something else here</a></li>
-                      </ul>
-                    </li>
-                  </ul>
+                    </p>
+                  </div>
+                  <div class="col-6 text-end">
+                    <ul class="list-inline">
+                      <li class="list-inline-item">
+                        <a href="#" class="text-muted">Contacto</a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="text-muted">Acerca</a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="text-muted">Terms</a>
+                      </li>
+                      <li class="list-inline-item">
+                        <a href="#" class="text-muted">Booking</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
               </div>
-            </div>
-          </nav>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+            </footer>
+          </div>
+       </div>
+      
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"></script>
+      <script src="script-inicio.js"></script>
     </body>
 </html>
