--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
     <body>
         <div class="container-fluid">
             <form class="mx-auto">
-                <h4 class="text-center">Login</h4>
+                <h4 class="text-center">Inicio Sesión</h4>
                 <div class="mb-3 mt-5">
-                  <label for="exampleInputEmail1" class="form-label">User Name</label>
+                  <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
                   <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
                 <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Password</label>
+                  <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                   <input type="password" class="form-control" id="exampleInputPassword1">
-                  <div id="emailHelp" class="form-text mt-3">Forget password ?</div>
+                  <div id="emailHelp" class="form-text mt-3">olvidaste tu contraseña?</div>
                 </div>
               
                 <a href="inicio/inicio.html" type="submit" class="btn btn-primary mt-5">Login</a>
