--- a/inicio/inicio.html
+++ b/inicio/inicio.html
@@ -136,45 +136,66 @@
                     <button class="btn btn-outline-success" type="submit">Buscar</button>
                   </form>
                 </div>
-                <div class="container-fluid row">
+                <div class="container-fluid row my-3">
                   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4014.6206570011814!2d-75.6300935168446!3d2.195438064341761!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e24d98384178e01%3A0x9f68d7ef91701394!2zR2FyesOzbiwgSHVpbGE!5e0!3m2!1ses-419!2sco!4v1719454755106!5m2!1ses-419!2sco" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
-                <!-- carrusel -->
-                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                      <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h5 class="card-title">Card title</h5>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Go somewhere</a>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="carousel-item">
-                      <img src="..." class="d-block w-100" alt="...">
-                    </div>
-                    <div class="carousel-item">
-                      <img src="..." class="d-block w-100" alt="...">
-                    </div>
+              </div>
+              <div class="container-fluid pt-5 row">
+                <div class="card" style="width: 18rem;">
+                  <img src="/inicio/img-inicio/img-manzana-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Manzana 001</h5>
                   </div>
-                  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                  </button>
-                  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                  </button>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Codigo: 12345667</li>
+                    <li class="list-group-item">Localidad: Centro</li>
+                    <li class="list-group-item">Direcciòn: Cll 8 #7-28</li>
+                  </ul>
+                  <div class="card-body text-center">
+                    <a href="#" class="card-link">Info...</a>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="/inicio/img-inicio/img-manzana-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Manzana 001</h5>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Codigo: 12345667</li>
+                    <li class="list-group-item">Localidad: Centro</li>
+                    <li class="list-group-item">Direcciòn: Cll 8 #7-28</li>
+                  </ul>
+                  <div class="card-body text-center">
+                    <a href="#" class="card-link">Info...</a>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="/inicio/img-inicio/img-manzana-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Manzana 001</h5>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Codigo: 12345667</li>
+                    <li class="list-group-item">Localidad: Centro</li>
+                    <li class="list-group-item">Direcciòn: Cll 8 #7-28</li>
+                  </ul>
+                  <div class="card-body text-center">
+                    <a href="#" class="card-link">Info...</a>
+                  </div>
+                </div>
+                <div class="card" style="width: 18rem;">
+                  <img src="/inicio/img-inicio/img-manzana-1.png" class="card-img-top" alt="...">
+                  <div class="card-body">
+                    <h5 class="card-title text-center">Manzana 001</h5>
+                  </div>
+                  <ul class="list-group list-group-flush">
+                    <li class="list-group-item">Codigo: 12345667</li>
+                    <li class="list-group-item">Localidad: Centro</li>
+                    <li class="list-group-item">Direcciòn: Cll 8 #7-28</li>
+                  </ul>
+                  <div class="card-body text-center">
+                    <a href="#" class="card-link">Info...</a>
+                  </div>
                 </div>
               </div>
             </main>
